# teamify

./: .pre-commit-config.yaml
.github/ISSUE_TEMPLATE/: 2-docs.md  3-refactor.md  4-devops.md  config.yml
backend/: pyproject.toml
